# ESP32-Spotify-Controller

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: button.rs  lcd.rs  main.rs  request.rs  spotify.rs  util.rs
